<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewHintTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hintTop"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

        <TextView
            android:id="@+id/buttonSetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/step1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/buttonEnableDeviceAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/step2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/buttonDisableLauncherIcon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/holo_blue_light"
            android:text="@string/step3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:clickable="true"
            android:focusable="true"
            />

        <TextView
            android:id="@+id/textViewHint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/hint"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

</ScrollView>
</LinearLayout>